[package]
name = "github-tools"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
octocrab = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
csv = "1.3"

[profile.dev]
opt-level = 0
debug = 2
